[package]
name = "disc-up-start"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
dirs = "4.0.0"
futures = "0.3.23"
path-absolutize = "3.0.13"
prompts = "0.1.0"
regex = "1.6.0"
sequoia-openpgp = "1.10.0"
serde = { version = "1.0.143", features = ["derive"] }
toml = "0.5.9"
