[package]
name = "gracile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10.14"
signal-hook = "0.3.14"

[build]
target = "x86_64-pc-windows-gnu"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["handleapi", "synchapi", "winbase", "winnt", "consoleapi", "processenv", "fileapi"] }
