[package]
name = "xxh-diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_float = "0.1.0"
clap = { version = "3.2.17", features = ["derive"] }
flurry = "0.4.0"
parking_lot = "0.12.1"
twox-hash = "1.6.3"
gracile = { path = "../gracile" }
flume = "0.10.14"
hashbrown = "0.12.3"
crossbeam-utils = "0.8.11"
sema-lot = { path = "../sema-lot" }

[target.'cfg(unix)'.dependencies]
proc-mounts = "0.3.0"
